<resources>
    <string name="app_name">SM1718_G06_PRACTICA1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_login_title">Práctica1</string>
    <string name="fragmetn_login_description">Servicios moviles 17/18</string>
    <string name="fragment_login_user">Usuario</string>
    <string name="fragment_linea2">Clave</string>
    <string name="login_clave">Clave</string>
    <string name="login_clave2">Contraseña</string>
    <string name="login_usuario" translatable="false" />
    <string name="login_user">Usuario</string>
    <string name="frgament_direccion">Dirección</string>
    <string name="fragment_login_Puerto">Puerto</string>
    <string name="fragment_login_button">pursa haqui</string>
    <string name="fragment_login_button2">Conectar</string>
    <string name="login_fragment_clave">Clave</string>
    <string name="login_fragment_valorclave" translatable="false" />
    <string name="activity_service">Esto pertenece a la actividad 2</string>
    <string name="service">ACTIVIDAD2</string>
    <string name="Service_title">ACTIVIDAD 2</string>
    <string name="service2">Actividad 2</string>
    <string name="app_name2">SSMM1718_G06_PRACTICA1</string>
</resources>
